WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181920
Turning off custom pasteboard data doesn't actually turn it off in WK2
https://bugs.webkit.org/show_bug.cgi?id=181920
Summary
Turning off custom pasteboard data doesn't actually turn it off in WK2
Ryosuke Niwa
Reported
2018-01-21 20:44:33 PST
We have a bug that turning off custom pasteboard data in WK2 doesn’t actually turn it off because defaultCustomPasteboardDataEnabled() returns false in UIProcess, and WebPreferenceStore ends up not updating the preferences after
https://trac.webkit.org/changeset/226156
. We should simply replace this crazy global settings by a regular runtime enabled flag.
Attachments
Fixes the bug
(19.71 KB, patch)
2018-01-21 20:49 PST
,
Ryosuke Niwa
wenson_hsieh
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2018-01-21 20:45:22 PST
<
rdar://problem/36686429
>
Ryosuke Niwa
Comment 2
2018-01-21 20:49:55 PST
Created
attachment 331893
[details]
Fixes the bug
Ryosuke Niwa
Comment 3
2018-01-21 22:39:26 PST
Thanks for the review!
Ryosuke Niwa
Comment 4
2018-01-21 22:41:07 PST
Committed
r227282
: <
https://trac.webkit.org/changeset/227282
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug