Source/WebCore/dom/DataTransfer.cpp
@@ -30,7 +30,6 @@
 #include "CachedImageClient.h"
 #include "DataTransferItem.h"
 #include "DataTransferItemList.h"
-#include "DeprecatedGlobalSettings.h"
 #include "DocumentFragment.h"
 #include "DragData.h"
 #include "Editor.h"
@@ -41,6 +40,7 @@
 #include "HTMLParserIdioms.h"
 #include "Image.h"
 #include "Pasteboard.h"
+#include "RuntimeEnabledFeatures.h"
 #include "Settings.h"
 #include "StaticPasteboard.h"
 #include "URLParser.h"
@@ -157,7 +157,7 @@ String DataTransfer::getDataForItem(Document& document, const String& type) cons
         return { };
     }
 
-    if (!DeprecatedGlobalSettings::customPasteboardDataEnabled())
+    if (!RuntimeEnabledFeatures::sharedFeatures().customPasteboardDataEnabled())
         return m_pasteboard->readString(lowercaseType);
 
     // StaticPasteboard is only used to stage data written by websites before being committed to the system pasteboard.
@@ -188,7 +188,7 @@ String DataTransfer::getData(Document& document, const String& type) const
 
 bool DataTransfer::shouldSuppressGetAndSetDataToAvoidExposingFilePaths() const
 {
-    if (!forFileDrag() && !DeprecatedGlobalSettings::customPasteboardDataEnabled())
+    if (!forFileDrag() && !RuntimeEnabledFeatures::sharedFeatures().customPasteboardDataEnabled())
         return false;
     return m_pasteboard->containsFiles();
 }
@@ -212,7 +212,7 @@ void DataTransfer::setDataFromItemList(const String& type, const String& data)
     ASSERT(canWriteData());
     RELEASE_ASSERT(is<StaticPasteboard>(*m_pasteboard));
 
-    if (!DeprecatedGlobalSettings::customPasteboardDataEnabled()) {
+    if (!RuntimeEnabledFeatures::sharedFeatures().customPasteboardDataEnabled()) {
         m_pasteboard->writeString(type, data);
         return;
     }
@@ -274,7 +274,7 @@ Vector<String> DataTransfer::types(AddFilesType addFilesType) const
     if (!canReadTypes())
         return { };
     
-    if (!DeprecatedGlobalSettings::customPasteboardDataEnabled()) {
+    if (!RuntimeEnabledFeatures::sharedFeatures().customPasteboardDataEnabled()) {
         auto types = m_pasteboard->typesForLegacyUnsafeBindings();
         ASSERT(!types.contains("Files"));
         if (m_pasteboard->containsFiles() && addFilesType == AddFilesType::Yes)
@@ -382,7 +382,7 @@ void DataTransfer::commitToPasteboard(Pasteboard& nativePasteboard)
 {
     ASSERT(is<StaticPasteboard>(*m_pasteboard) && !is<StaticPasteboard>(nativePasteboard));
     PasteboardCustomData customData = downcast<StaticPasteboard>(*m_pasteboard).takeCustomData();
-    if (DeprecatedGlobalSettings::customPasteboardDataEnabled()) {
+    if (RuntimeEnabledFeatures::sharedFeatures().customPasteboardDataEnabled()) {
         customData.origin = m_originIdentifier;
         nativePasteboard.writeCustomData(customData);
         return;
